alert de um item da minha lista de gists

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <html>
-<head><title>blog de formiga</title></head>
+<head>
+  <title>blog de formiga</title>
+  <script src="js/jquery-1.5.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="js/application.js" type="text/javascript" charset="utf-8"></script>
+</head>
 <body>
-  <h1 id="blog_de_formiga">Blog de Formiga</h1>
-  <p>Passos iniciais para criar um blog no github</p>
-  <p>Essa idéia pode não dar em nada, mas me pareceu divertida. Vou fazer esse blog funcionar baseado em Gist.</p>
-  <p>Abraços, até mais.</p>
+  <h1>Posts</h1>
+<div id="posts">
+  
+</div>
 </body>
 </html>
