atualização do cross browsing usando jsonp

--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <title>blog de formiga</title>
   <script src="js/jquery-1.5.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/application.js" type="text/javascript" charset="utf-8"></script>
+  <script src=" https://gist.github.com/api/v1/json/gists/formigarafa?callback=register_gists"></script>
 </head>
 <body>
   <h1>Posts</h1>
-<div id="posts">
-  
+  <ul class="gists">
+  </ul>
 </div>
 </body>
 </html>
