--- a/index.html
+++ b/index.html
@@ -3,10 +3,18 @@
   <title>Posts &amp; Gists - G-log do Formiga</title>
   <script src="js/jquery-1.5.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/application.js" type="text/javascript" charset="utf-8"></script>
-  <script src=" https://gist.github.com/api/v1/json/gists/formigarafa?callback=register_gists"></script>
+  <script src="https://gist.github.com/api/v1/json/gists/formigarafa?callback=register_gists"></script>
+  <link rel="stylesheet" type="text/css" href="style/all.css" />
 </head>
 <body>
   <a href="http://github.com/formigarafa/formigarafa.github.com"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://d3nwyuy0nl342s.cloudfront.net/img/71eeaab9d563c2b3c590319b398dd35683265e85/687474703a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f677261795f3664366436642e706e67" alt="Fork me on GitHub"></a>
+  <div class="top">
+    <span>G-Log</span>
+    <p>
+      programmer blog
+    </p>
+    <p> programmer way</p>
+  </div>
   <h1>Posts &amp; Gists</h1>
   <ul class="gists">
   </ul>
