inserção de interpretado markdown

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
   <title>Posts &amp; Gists - G-log do Formiga</title>
+  <script src="js/showdown.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/jquery-1.5.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/application.js" type="text/javascript" charset="utf-8"></script>
   <script src="https://gist.github.com/api/v1/json/gists/formigarafa?callback=register_gists"></script>
