--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <script src="js/application.js" type="text/javascript" charset="utf-8"></script>
   <script src="https://gist.github.com/api/v1/json/gists/formigarafa?callback=register_gists"></script>
   <link rel="stylesheet" type="text/css" href="style/all.css" />
+  <link rel="stylesheet" type="text/css" href="style/bundle_gist.css" />
+  <link rel="stylesheet" type="text/css" href="style/bundle_common.css" />
   <link rel="stylesheet" href="https://gist.github.com/stylesheets/gist/embed.css"/>
 </head>
 <body>
@@ -21,8 +23,8 @@
     <hr/>
   </div>
   <h1>Posts &amp; Gists</h1>
-  <ul class="gists">
-  </ul>
+  <div class="gists">
+  </div>
 </div>
 </body>
 </html>
