rodapé, aviso para o mané quem não tem javascript. doctype.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
+<!DOCTYPE html>
 <html>
 <head>
+  <meta http-equiv="Content-Type" content="text/html;charset=utf-8" >
   <title>Posts &amp; Gists - G-log do Formiga</title>
   <script src="js/showdown.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/jquery-1.5.min.js" type="text/javascript" charset="utf-8"></script>
@@ -17,6 +19,21 @@
     <p>programmer way</p>
   </div>
   <div class="gists">
+    <noscript>
+      <div>
+        <p>
+          Este é um site de programador. Como programador eu posso me dar ao luxo de exibir-lo
+          apenas para quem tem javascript no browser. :p
+        </p>
+        <p>
+          Vá arrumar um browser.
+        </p>
+      </div>
+    </noscript>
+  </div>
+  <div class="bottom">
+    <p><span>Credits: Rafael Santos ( formigarafa at gmail )</span></p>
+    <p><span></span></p>
   </div>
 </body>
 </html>
