modificações para pegar a lista de gists do usuário com a versão 3 da API

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <script src="js/showdown.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/jquery-1.5.min.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/application.js" type="text/javascript" charset="utf-8"></script>
-  <script src="https://gist.github.com/api/v1/json/gists/formigarafa?callback=register_gists"></script>
+  <script src="https://api.github.com/users/formigarafa/gists?callback=registerGists"></script>
+  
   <link rel="stylesheet" type="text/css" href="style/bundle_gist.css" />
   <link rel="stylesheet" type="text/css" href="style/bundle_common.css" />
   <link rel="stylesheet" type="text/css" href="style/all.css" />
