configuração do ajax do jquery para funcionar com jsonp na api do github

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>Posts &amp; Gists - G-log do Formiga</title>
   <script src="js/showdown.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/jquery-1.5.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="js/jquery_setup.js" type="text/javascript" charset="utf-8"></script>
   <script src="js/application.js" type="text/javascript" charset="utf-8"></script>
   <script src="https://api.github.com/users/formigarafa/gists?callback=registerGists"></script>
   
