troca exibir-lo por exibí-lo

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ sdflgkds
     <noscript>
       <div>
         <p>
-          Este é um site de programador. Como programador eu posso me dar ao luxo de exibir-lo
+          Este é um site de programador. Como programador eu posso me dar ao luxo de exibí-lo
           apenas para quem tem javascript no browser. :p
         </p>
         <p>
